@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-05-12T00:58:20Z",
-  "count" : 297,
+  "timestamp" : "2024-05-25T00:53:52Z",
+  "count" : 247,
   "count_minmax" : [ 113, 297 ],
-  "count_decinc" : [ -0, +297 ],
+  "count_decinc" : [ -50, +297 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
