@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-05-24T16:13:48Z",
-  "count_outdated" : 206659,
-  "uniques_outdated" : 2045,
-  "count" : 211016,
+  "timestamp" : "2024-05-25T00:53:52Z",
+  "count_outdated" : 206956,
+  "uniques_outdated" : 2047,
+  "count" : 211110,
   "uniques" : 2077,
   "clones" : [
     {
-      "timestamp": "2024-05-10T00:00:00Z",
-      "count": 40,
-      "count_minmax": [ 40, 297 ],
-      "count_decinc": [ 257, 297 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
       "timestamp": "2024-05-11T00:00:00Z",
-      "count": 297,
+      "count": 247,
       "count_minmax": [ 113, 297 ],
-      "count_decinc": [ 0, 297 ],
+      "count_decinc": [ 50, 297 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-05-24T00:00:00Z",
-      "count": 203,
-      "count_minmax": [ 111, 203 ],
-      "count_decinc": [ 0, 203 ],
+      "count": 297,
+      "count_minmax": [ 111, 297 ],
+      "count_decinc": [ 0, 297 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
